--- a/styles.css
+++ b/styles.css
@@ -32,16 +32,20 @@ justify-content: center;
 margin: 150px auto;
 border-radius: 5px;
 width: 1000px;
+}
 
-
-
+.image-container {
+  background-color: #9F55CE;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  opacity: 0.85;
 }
 
 .image {
   height: 420px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
-  mix-blend-mode: color-dodge;
+  mix-blend-mode: multiply;
 }
 
 .analytics,
