--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,6 @@ body {
   background-color: var(--verydarkblue); 
 }
 
-content {
-
-}
 
 .container {
 display: flex; 
@@ -31,7 +28,7 @@ background-color: var(--darkdesaturatedblue);
 justify-content: center;
 margin: 150px auto;
 border-radius: 5px;
-width: 1000px;
+max-width: 1000px;
 }
 
 .image-container {
