testing media queries

--- a/styles.css
+++ b/styles.css
@@ -99,8 +99,8 @@ span {
 /* MEDIA QUERIES */
   @media (max-width: 962px) {
     .container {
-      display: flex ;
-      margin:  0;
+      display: flex;
+      margin: 0;
       text-align: center;
      
     }
@@ -111,13 +111,18 @@ span {
       border-top-right-radius: 5px;
       border-bottom-right-radius: 5px;
      flex-direction: column;
-       
-      
-        
       }
       
       img {
        background-size: cover;
         flex-grow: 1;
       }
+  }
+
+    @media (max-width: 805px) {
+      .container {
+        display: flex;
+        text-align: center;
+      }
+      
     }
