--- a/styles.css
+++ b/styles.css
@@ -100,8 +100,10 @@ span {
   @media (max-width: 962px) {
     .container {
       display: flex;
-      margin: 0;
       text-align: center;
+      margin: auto;
+      align-items: center;
+
      
     }
     
@@ -110,7 +112,7 @@ span {
       background-color: #9F55CE;
       border-top-right-radius: 5px;
       border-bottom-right-radius: 5px;
-     flex-direction: column;
+    
       }
       
       img {
@@ -119,10 +121,26 @@ span {
       }
   }
 
-    @media (max-width: 805px) {
+    @media (max-width: 846px) {
       .container {
         display: flex;
         text-align: center;
+        border: 5px solid pink;
       }
-      
-    }
+
+        .image-container {
+          display: flex;
+          background-color: #9F55CE;
+          border-top-right-radius: 5px;
+          border-bottom-right-radius: 5px;
+          height: 100%;
+          
+         
+        
+          }
+          
+          img {
+           background-size: cover;
+           
+          }
+      }
