--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&family=Lexend+Deca:wght@300;400&display=swap');
 
-
 :root {
   --verydarkblue: hsl(233, 47%, 7%);
   --darkdesaturatedblue: hsl(244, 38%, 16%);
@@ -9,35 +8,28 @@
   --maintransparentwhite: hsla(0, 0%, 100%, 0.75);
   --headingtransparentwhite: hsla(0, 0%, 100%, 0.6);
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
 }
-
 body {
-  background-color: var(--verydarkblue); 
+  background-color: var(--verydarkblue);
 }
-
-
 .container {
-display: flex; 
-background-color: var(--darkdesaturatedblue);
-justify-content: center;
-margin: 150px auto;
-border-radius: 5px;
-max-width: 1000px;
+  display: flex;
+  background-color: var(--darkdesaturatedblue);
+  justify-content: center;
+  margin: 150px auto;
+  border-radius: 5px;
+  max-width: 1000px;
 }
-
 .image-container {
   display: flex;
   background-color: #9F55CE;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
-
 img {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -45,13 +37,12 @@ img {
   height: 420px;
   mix-blend-mode: multiply;
 }
-
-.analytics,
-.content-section p {
-  color: var(--white);
-  
+.mobile {
+  display: none;
 }
-
+.analytics, .content-section p {
+  color: var(--white);
+}
 .analytics ul {
   display: flex;
   font-family: 'Lexend Deca', sans-serif;
@@ -59,35 +50,28 @@ img {
   list-style-type: none;
   font-size: 1.4rem;
 }
-
 .analytics li {
   padding-left: 10px;
 }
-
 .content-section {
   padding: 35px;
   margin-top: 50px;
 }
-
 .content-section p {
   font-family: 'Lexend Deca', sans-serif;
   padding-top: 30px;
   line-height: 1.7;
   font-weight: 300;
 }
-
 .insights {
   font-family: 'Inter', sans-serif;
   font-size: 1.875rem;
   color: var(--white);
   width: 90%;
-  
 }
-
 span {
   color: var(--softviolet);
 }
-
 .numbers {
   text-transform: uppercase;
   color: var(--white);
@@ -95,42 +79,59 @@ span {
   letter-spacing: 2px;
   font-weight: 200;
 }
-
 /* MEDIA QUERY */
 
-  @media (max-width: 930px) {
-    .container {
+@media (max-width: 930px) {
+  body {
+      background-color: var(--verydarkblue);
+ }
+  .container {
       display: flex;
       flex-direction: column-reverse;
+      align-items: center;
       text-align: center;
-      margin: auto;
-      
-      
-    }
-    
-    .image-container {
+      margin: 20px auto;
+      max-width: 90% 
+ }
+  .image-container {
       display: flex;
       background-color: #9F55CE;
       border-top-right-radius: 5px;
-      border-top-left-radius: 5px; 
-      border-bottom-right-radius: 0; 
-      }
-      
-      img {
-       width: 100%;
-       border-bottom-right-radius: 0; 
-     
-      }
-
-      .analytics {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .analytics li {
-        margin: 10px;
-      }
-  }
-
-    
+      border-top-left-radius: 5px;
+      border-bottom-right-radius: 0;
+      align-self: center;
+      width: 100%;
+ }
+  img {
+      height: 100%;
+      width: 100%;
+      border-bottom-right-radius: 0;
+ }
+  .mobile {
+      display: flex;
+ }
+  .desktop {
+      display: none;
+ }
+  .content-section {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      align-items: center;
+      margin: 0;
+ }
+  .analytics {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+ }
+  .analytics li {
+      margin: 10px;
+      font-size: 1.7rem;
+ }
+  .analytics ul {
+      display: flex;
+      flex-direction: column;
+      width: 70% 
+ }
+}
